fixed z-index of corner pic

--- a/css/style2.css
+++ b/css/style2.css
@@ -115,6 +115,7 @@ ul {
   bottom: -50px;
   right: 30px;
   position: absolute;
+  z-index: -10;
 }
 
 .backbutton {
